src/components/app/App.css
@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap');

:root {
  --link-key-background: #eee;
  --link-key-color: #333;
  --missing-favicon-color: yellow;
}

body {
  font-family: 'Open Sans', sans-serif;
  color: #666;
}

.ml-wrapper {
  padding: 5px;
  margin: 5px;
}

.ml-widget-label h2 {
  color: #000;
  display: inline;
  flex-grow: 1;
  font-size: 14px;
  line-height: 34px;
  margin: 0;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.ml-widget-item-link {
  color: #444;
  display: block;
  font-size: 14px;
  text-decoration: none;
}

.ml-widget-item-link::after {
  content: '';
  display: block;
  width: 0;
  height: 2px;
  transition: width .3s;
  background: #999;
}

.ml-widget-item-link:hover::after {
  width: 100%;
}

.ml-widget-item-link .content {
  color: #444;
  display: flex;
  justify-content: space-between;
  text-decoration: none;
}

.ml-widget-item-link .left-items {
  flex: 1;
  display: flex;
  align-items: center;
}

.ml-widget-item-link:focus, .ml-widget-item-link:focus {
  text-decoration: none;
}

.ml-widget-item-link kbd {
  border-radius: 3px;
  background-color: var(--link-key-background, #eee);
  color: var(--link-key-color, #333);
  border: 1px solid #b4b4b4;
  box-shadow: 0 1px 1px rgba(0, 0, 0, .2), 0 2px 0 0 rgba(255, 255, 255, .7) inset;
  font-size: 1.1em;
  font-weight: 700;
  line-height: 1;
  padding: 0 4px;
  white-space: nowrap;
}

.ml-rows {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-self: flex-start;
  margin: 5px 0;
  width: 100%;
}

.ml-rows ul {
  display: block;
  list-style-type: none;
  min-height: 23px;
  overflow-x: hidden;
  margin: 0;
  padding: 0;
}

.ml-rows li {
  margin-bottom: 2px;
}

.ml-columns {
  display: flex;
  flex-direction: row;
}

.ml-widget {
  flex: 1;
  border: 1px solid gray;
  margin: 5px 10px;
  padding: 0 10px 10px 10px;
  background-color: #fff;
  box-shadow: 8px 8px 6px rgba(0,0,0,.2);
}

.ml-widget:hover .ml-toolbar {
  display: block;
}

.ml-favicon {
  width: 16px;
  height: 16px;
  line-height: 16px;
  background-repeat: no-repeat;
  background-position: center center;
  background-size: 16px 16px;
  margin-right: 6px;
}

.ml-favicon img {
  max-width: 16px;
  max-height: 16px;
}

.ml-toolbar {
  float: right;
  line-height: 34px;
  cursor: pointer;
  display: none;
}

.fa-external-link-alt {
  color: #000;
}

.fa-external-link-alt:hover {
  animation-name: pulse;
  animation-duration: 0.7s;
  animation-timing-function: linear;
  animation-iteration-count: infinite;
  animation-direction: alternate;
}

@keyframes pulse {
  50% {
    transform: scale(0.8);
  }
}

.missing-favicon {
  width: 16px;
  height: 16px;
  background-color: var(--missing-favicon-color, yellow);
  /*noinspection CssInvalidFunction*/
  mask: svg-load('../../img/missingFavicon.svg') no-repeat 50% 50%;
  mask-size: cover;
}

.ml-missing-favicon {
  display: inline-block;
  margin-right: 6px;
}

.ml-widget a:focus {
  outline: 0;
  font-weight: bold;
}

/* Set max dimensions otherwise it has a very long height */
#files {
  max-width: 100%;
  max-height: 100%;
}

